Fixes #5: Padding section is not responsive.

--- a/components/grid/grid.less
+++ b/components/grid/grid.less
@@ -4,7 +4,7 @@ CKSource grants you permission to distribute this file exclusively as part of th
 It is forbidden to copy and distribute this file in its original or modified form in any other way than together with the CKEditor SDK that this file constitutes an integral part of.
 */
 
-@grid-gutter-width: 30px;
+@grid-gutter-width: 4%;
 
 .generate-grid( 100 );
 
