--- a/components/sdk/core.less
+++ b/components/sdk/core.less
@@ -35,11 +35,6 @@ main {
 	// Legacy support.
 	border-color: @global-box-border-color;
 
-	// SDK is a little bit more spacious.
-	.global-is-desktop( {
-		padding-left: 2*@grid-gutter-width;
-	} );
-
 	h1 {
 		// Make the header more spacious in SDK.
 		// To use .documentation in a horizontal layout.
